# micro-ga

./: .pylintrc  pyproject.toml
.github/workflows/: test.yml
examples/: README.md  test-brython.html  test-pyodide.html
micro_ga/: layout.py  matrix.py  matrix_ganja.py  multivector.py
tests/: __init__.py  test_creation.py  test_matrix.py  test_numpy.py  test_operations.py  xtest_clifford.py  xtest_ganja.py  xtest_grassmann.py  xtest_kingdon.py
