[project]
name = "micro_ga"
version = "0.0.1.dev0"      # Keep in sync with micro_ga/__init__.py:__version__
description = "Minimal geometric algebra multi-vector operations"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
]
dependencies = ["numpy"]

[project.optional-dependencies]
# Development deps, installed through `pip install .[dev]`
dev = ["pytest", "pytest-cov"]
# Development deps with external libraries, installed through `pip install .[dev_ext]`
dev_ext = ["pytest", "pytest-cov",
    # We need the latest clifford module version, instead of
    # v1.4.0 from pypi.org (it only works on python upto 3.11)
    "clifford @ git+https://github.com/pygae/clifford",
    "juliacall",
    "kingdon"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
